# pen-compare

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
pen_compare/: __init__.py  _version.py  cli.py
tests/: test_placeholder.py
