[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pen-compare"
description = "Public web tool for cross-system editor selection in therapeutic genome engineering"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Anees Ahmed", email = "anees.ahmed2022@vitstudent.ac.in"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pen-core>=0.0.1",
    "genome-atlas>=0.1.0",
    "pen-score>=0.1.0",
    "pandas>=2.2",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-cov>=5.0", "ruff>=0.3", "mypy>=1.9", "pre-commit>=3.7"]
docs = ["sphinx>=7.3", "sphinx-autodoc-typehints", "furo", "myst-nb"]

[project.scripts]
pen-compare = "pen_compare.cli:main"

[project.urls]
Homepage = "https://github.com/ahmedanees-m/pen-compare"
Repository = "https://github.com/ahmedanees-m/pen-compare"

[tool.setuptools.packages.find]
include = ["pen_compare*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=pen_compare --cov-report=term-missing --cov-report=xml --strict-markers"
testpaths = ["tests"]
